# 3dcoursework

./: README.md
bunny/data/: bun000.ply  bun000_1.ply  bun045.ply  bun090.ply  bun180.ply  bun270.ply  bun315.ply
bunny/output/: area.csv  explicitlaplace.csv  gauss.csv  implicitlaplace.csv  k1_lb.csv  k1_uni.csv  k2_lb.csv  k2_uni.csv  mean.csv  test_mesh.csv  test_openmesh.csv  uniform.csv
framework/lib/: CMakeLists.txt  Readme.txt
framework/lib/cmake/: FindANN.cmake
framework/lib/example/meshviewer/: main.cpp
framework/lib/example/meshviewer/gui/: Algorithms.h  assignment2.cpp  assignment2.h  meshviewer.cpp  meshviewer.h
framework/lib/include/mh/3d/: camera.h  mesh.h  pointset.h
framework/lib/include/mh/base/: defs.h  imports.h
framework/lib/include/mh/gpu/: shader.h
framework/lib/include/mh/gui/: viewer.h
framework/lib/include/mh/io/: meshio.h  ply.h
framework/lib/src/3d/: camera.cpp  mesh.cpp  scene.cpp
framework/lib/src/gpu/: shader.cpp
framework/lib/src/gui/: viewer.cpp
framework/lib/src/gui/widgets/: widget.cpp
framework/lib/src/io/: meshio.cpp  meshio_backup
